tests/rename/should_fail/T15487a.hs
module T15487a (null) where
